--- a/css/styles2.css
+++ b/css/styles2.css
@@ -61,13 +61,28 @@ ul {
 .contacts-list {
   margin-left: auto;
 }
-.email-link {
-  margin-right: 50px;
+
+.contact-item_email {
+  display: flex;
+  align-items: center;
+  width: 161px;
+  height: 16px;
+  margin-right: 30px;
+}
+
+.contact-item_tel {
+  display: flex;
+  align-items: center;
+  width: 142px;
+  height: 16px;
+}
+
+.email_icon {
+  fill: #757575;
 }
 
 .logo-link {
   margin-right: 93px;
-
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -94,23 +109,14 @@ ul {
   color: #212121;
 }
 
-.navactiv-link:hover,
-.navactiv-link:focus {
-  color: #2196f3;
-}
-
 .tel-link {
+  margin-left: auto;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 1, 14;
   letter-spacing: 0.02em;
   color: #757575;
-}
-
-.email-link:hover,
-.email-link:focus {
-  color: #2196f3;
 }
 
 .navactiv-link:hover,
