--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ ul {
 
 .contacts-list {
   margin-left: auto;
+  fill: #757575;
 }
 
 .contact-item_email {
@@ -82,9 +83,6 @@ ul {
   height: 16px;
 }
 
-.email_icon {
-  fill: #757575;
-}
 .email-link_img:hover .email_icon,
 .email-link_img:focus .email_icon {
   fill: #2196f3;
@@ -122,7 +120,8 @@ ul {
   color: #2196f3;
 }
 
-.tel-link {
+.tel-link,
+.email-link {
   margin-left: auto;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
