--- a/css/styles2.css
+++ b/css/styles2.css
@@ -60,6 +60,7 @@ ul {
 
 .contacts-list {
   margin-left: auto;
+  fill: #757575;
 }
 
 .contact-item_email {
@@ -77,8 +78,15 @@ ul {
   height: 16px;
 }
 
-.email_icon {
-  fill: #757575;
+.tel-link,
+.email-link {
+  margin-left: auto;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1, 14;
+  letter-spacing: 0.02em;
+  color: #757575;
 }
 
 .logo-link {
@@ -168,6 +176,16 @@ ul {
   padding-bottom: 94px;
 }
 
+.portfolio-link {
+  display: block;
+}
+
+.portfolio-item :hover,
+.portfolio-item :focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
@@ -215,29 +233,29 @@ ul {
   background-color: #2f303a;
 }
 
-.mail-link-footer,
-.tel-link-footer {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1, 71px;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+.container-footer {
+  display: flex;
+  width: 1200px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.adress-links_footer {
+  margin-top: 60px;
+  margin-bottom: 60px;
+  width: 231px;
+  height: 81px;
 }
 
 .logo-link-footer {
-  padding-top: 60px;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1, 19;
   letter-spacing: 0.03em;
   color: white;
-}
-
-.address {
-  padding-bottom: 60px;
 }
 
 .contacts-list-footer :not(:last-child) {
@@ -248,7 +266,64 @@ ul {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1, 71px;
+  line-height: 1, 71;
   letter-spacing: 0.03em;
   color: #ffffff;
+}
+
+.mail-link-footer,
+.tel-link-footer {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1, 71;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.social-links_footer {
+  margin-top: 72px;
+  margin-bottom: 100px;
+  width: 206px;
+  height: 80px;
+  margin-left: 70px;
+}
+
+.social-footer_title {
+  margin-bottom: 20px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1, 14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.social-list_footer {
+  display: flex;
+  align-items: center;
+}
+.social-list_footer :not(:last-child) {
+  margin-right: 10px;
+}
+
+.item-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  fill: #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.item-link:hover,
+.item-link:focus {
+  background-color: #2196f3;
+}
+.item-link:hover .social_icon,
+.item-link:focus .social_icon {
+  fill: #ffffff;
 }
