--- a/css/styles2.css
+++ b/css/styles2.css
@@ -146,7 +146,9 @@ ul {
 .button-item:not(:last-child) {
   margin-right: 8px;
 }
-.modal-btn {
+
+.modal-btn,
+.modal-activbtn {
   min-width: 86px;
   padding: 6px;
 
@@ -156,19 +158,28 @@ ul {
   line-height: 1, 6px;
   letter-spacing: 0.03em;
   color: #212121;
-  background-color: #f5f4fa;
   cursor: pointer;
+  background-color: #f5f4fa;
   border: none;
   border-radius: 4px;
 }
 
-.modal-activbtn {
-  min-width: 86px;
-  padding: 6px;
+.activbutton-link :hover,
+.activbutton-link :focus {
   color: #ffffff;
   background-color: #2196f3;
-  border: none;
-  border-radius: 4px;
+}
+
+.button-link :hover,
+.button-link :focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.activbutton-link :hover,
+.activbutton-link :focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* portfolio cards */
@@ -176,12 +187,16 @@ ul {
   padding-bottom: 94px;
 }
 
+.card {
+  display: inline-block;
+}
+
 .portfolio-link {
   display: block;
 }
 
-.portfolio-item :hover,
-.portfolio-item :focus {
+.portfolio-link :hover,
+.portfolio-link :focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
