--- a/css/styles2.css
+++ b/css/styles2.css
@@ -195,8 +195,8 @@ ul {
   display: block;
 }
 
-.portfolio-link :hover,
-.portfolio-link :focus {
+.portfolio-item:hover .portfolio-link,
+.portfolio-item:focus .portfolio-link {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
