--- a/css/styles.css
+++ b/css/styles.css
@@ -239,6 +239,8 @@ ul {
   background: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
 }
 
 .advantage-item_icon {
@@ -369,6 +371,11 @@ ul {
   border-radius: 4px;
   width: 170px;
   height: 90px;
+}
+
+.clients-list_item:hover,
+.clients-list_item:focus {
+  border-color: #2196f3;
 }
 
 .clients-list_icon {
